update with requested changes

--- a/css/styles-description.css
+++ b/css/styles-description.css
@@ -1,5 +1,5 @@
 .jumbotron {
-	background-color: #14578e;
+	background-color: #B43757;
 	padding-top: 5px;
 	padding-bottom: 5px;
 	display: flex;
@@ -8,7 +8,7 @@
 .jumbotron-footer {
 
 	color: rgba(200,200,200,0.8);
-	background-color: #14578e;
+	background-color: #B43757;
 	padding-top: 5px;
 	padding-bottom: 5px;
 	font-weight: 100;
@@ -41,8 +41,8 @@
 }
 
 .rating-circle {
-	border-radius: 50%;
-    background: #f78152;
+	border-radius: 0%;
+    background: #D21F3C;
     color: white;
     font-family: RobotoBold, Helvetica, Arial;
     font-size: 1.75rem;
@@ -56,8 +56,8 @@
     float: left;
 }
 .rating-circle-medium {
-	border-radius: 50%;
-    background: #f78152;
+	border-radius: 0%;
+    background: #D21F3C;
     color: white;
     font-family: RobotoBold, Helvetica, Arial;
     font-size: 1.55rem;
@@ -76,7 +76,7 @@
 .rating-circle-small {
 	padding-left: 2px;
 	border-radius: 50%;
-    background: #f78152;
+    background: #D21F3C;
     border:1px solid black;
     font-family: RobotoBold, Helvetica, Arial;
     font-size: 1.75rem;
